lab1/Test/L1-A-12-34.output
Error Type B at Line 8
Error Type A at Line 15
Error Type A at Line 16
Error Type B at Line 38
Error Type B at Line 48
Error Type A at Line 52
Error Type A at Line 54
