lab1/Test/L1-A-12-34.cmm
struct {
  int TWsTAHW = CNhL36qfUzj || y3IFVBfPExMsxU8tq && 
    ! - w2y [ pnte = sM = NDG = mi2SWxjCSPg <= SFeV9YDQk3IU0yeOj 
    - uAbc_0 / ! ( d = WVQCMY7lO95k || Lfk86ulafYSK && 
    QbVK1dx7v > gUyMGCtvfoHSo9W + bCHpnq ( cFOcV7Gb2EuQYo2 
    , KQsZ3z4xH4hpo || kfXS && YNyBRJOy == - - T521c8 
    ( mqkAw6CEDqYu6HDMxTbA = rxhb5NyXqV >= NCzU8o - ZSI 
    * NMg5cyi [ < - ! 924678427.1730574807 . xRPWU - 60392196 
    != XFL7kPTd0NNai ] ) . GAeGCP_p ) * KuH0LEta1Do ( 
    ) ) . R0X8XuNh0tfpmBH ] , q9akC [ 1075878257 ] ;
};
float qz 
;
struct eZlfvdMoAF7ml S8XO39RUKhigD7z ( ) {
}$
int `u6GU5OBTfhALliBhhF9 ( int zRTFgT26bd3Vm8SgZ2S 
  , struct Kie860lMfmkEqgmC {
}fq3 ) {
{
  }  if ( MWyud1rlsXNFjY7B )   if ( augx19_yN4xmaT2tr 
    )   if ( OYR )   if ( ts )   while ( PiWBeUsIfK ) 
      KgM1hlWDctQS ;

else {
  }



  while ( cRqETT9P )   while ( oomxmZVc3Qdqzzn )   rsQJoH0v5GfIkQ 
    ;


  if ( Rnovx8aXXt2JtfP_9YFg ) {
    int K4PAK1 ;
  }
  if ( P5uU5l4k2mvmJnSZ4 )   if ( CMXIvplYPbWZu6 ) 
      wTdA5T6ad1mfZ1IiyRC 
else   if ( LjplYI8O4Rco )   o2KMaPwZyO7qqgIJny ;



  if ( tQ1K )   while ( aqLHgFY7C1YCm9 )   if ( EJunG9LHrnXRKlHuD 
    )   while ( UDF1 )   ZZdUZZivQoBCTnbpAR_T ;

else   N8pvuenSBXM41Yq5R 


else   if ( YpYopaH )   while ( t4YV7A9s7P6BJ9KL ) 
    {
    m3Ct3 ;
    _Aq ;
    mbFO1vOm #;
    G3i7U5ubeJoT4xsNKeDX ;
'  }


  if ( j09ozzETUmD )   mMEg4ZAxyXcCF9Bva ;
else   return CeS4Hpa7U2A ;

}
int ;
int gWSn1A_xUoF3bkDq , YpGPbiM64b 

;
